fix(stack): update deployment logic and operations (#28)
* chore(app): remove negative control dep on page load

* chore(stack): add subdomain specs for multiple instance deployment; change template folder compose mounts

* chore(stack): change dev and docker logic

* chore(stack): change deployment landing page

* chore(stack): add git repo state to app footer

* chore(stack): git version at runtime; test dev build api server

* chore(stack): clone repo with deploy; dev watcher; feat libgit unstable

* chore(stack): modify docs; add trigger file

* chore(stack): simplify dev docs

* chore(stack): add trigger file to gitignore

* chore(stack): known issues docs

* chore(stack): warn msg exceptions

* chore(stack): remove template dir assets

* chore(stack): add pdf feature to hot reload api; remove production release build and env from dev

* chore(stack): add subdomain toml config; add subdomain prefix deploy arg

* chore(stack): add option for trigger rebuild in dev mode

* chore(stack): fix traefik subdomain spec in compose file; test hot reload

* chore(traefik): change to subdomain schema for traefik routers

* docs(intro): add basic documentation (#24)

* Docs/intro dev (#27)

* docs(intro): add basic documentation

* feat(utils): Comparative abundance plot for taxon (#26)

Merges `cerebro-utils taxa` plotting task into docs branch from which it was diverged

--- a/templates/stack/docker/Dockerfile.server
+++ b/templates/stack/docker/Dockerfile.server
@@ -18,26 +18,27 @@ RUN apt-get update && apt-get install -y \
 # enable features for Tectonic so the default version ships
 # without the Latex compiler (system-dependencies)
 
-USER cerebro-api
 WORKDIR /usr/src/cerebro
 
-
-
 {{#if dev }}
+RUN cargo install cargo-watch 
+{{/if}}
+
 COPY ./src src
 COPY ./templates templates
 COPY ./Cargo.toml Cargo.toml
-{{else}}
-RUN git clone --depth=1 -b {{{ revision }}} https://github.com/esteinig/cerebro && cd cerebro
-{{/if}}
 
+# Generate the test report with Tectonic so that all LaTeX packages are downloaded prior to 
+# launching the container and using the reporting functions for the first time - otherwise
+# the first request for a report will take a long time to complete
 
+{{#unless dev}}
 ENV PATH="${PATH}:/opt/cerebro/bin"
-RUN cargo build --release --features pdf
-RUN cp target/release/cerebro /opt/cerebro/bin
+RUN cargo build --release --features pdf && \
+    mkdir -p /opt/cerebro/bin && \
+    cp target/release/cerebro /opt/cerebro/bin
+RUN cerebro report compile --base-config /usr/src/cerebro/templates/report/test.toml --output test.pdf --pdf && rm test.pdf
 WORKDIR /opt/cerebro
+{{/unless}}
 
-RUN cerebro report compile --base-config /usr/src/cerebro/templates/report/report.toml --output test.pdf --pdf && rm test.pdf
-
-
-# USER IS CURRENTLY ROOT BECAUSE OF TECTONIC DEPENDENCIES - CHANGE THIS
+# USER cerebro-api
