--- a/templates/stack/stack.toml
+++ b/templates/stack/stack.toml
@@ -28,7 +28,11 @@ cerebro_admin_password          = "admin"
 
 [traefik]
 deploy                          = "localhost"    # localhost | web
-launch                          = true        
+launch                          = true      
+
+[traefik.subdomain]
+api                             = "api"          # api.cerebro.localhost or api.example.org or api.dev.example.org ...
+app                             = "app"          # app.cerebro.localhost or app.example.org ...
 
 [traefik.network]
 name                            = "proxy"
