fix(report): pdf blocking thread and response handling

--- a/nextflow.config
+++ b/nextflow.config
@@ -164,6 +164,11 @@ params {
             phage {
                 enabled = false
                 fasta = null
+                identifiers {
+                    dna_extraction = "T4-Monash"
+                    rna_extraction = null
+                    sequencing     = "PhiX"
+                }
             }
         }
 
