chore(nextflow): workflow rewrite pt 1

--- a/lib/configs/resources.config
+++ b/lib/configs/resources.config
@@ -13,6 +13,9 @@ params {
         fastp {
             cpus = 4
         }
+        nanoq {
+            cpus = 1
+        }
         spades {
             cpus = 8
         }
@@ -85,6 +88,7 @@ process {
     withLabel: ivar { cpus = params.resources.ivar.cpus }
     withLabel: mash { cpus = params.resources.mash.cpus } 
     withLabel: fastp { cpus = params.resources.fastp.cpus }
+    withLabel: nanoq { cpus = params.resources.nanoq.cpus }
     withLabel: spades { cpus = params.resources.spades.cpus }
     withLabel: kraken2 { cpus = params.resources.kraken2.cpus }
     withLabel: cerebro { cpus = params.resources.cerebro.cpus }
