--- a/nextflow.config
+++ b/nextflow.config
@@ -70,6 +70,14 @@ params {
     }
 
 
+    // Global ONT specific settings
+
+    ont {
+        minimap2 {
+            preset = "map-ont"
+        } 
+    }
+
     // =====================================================
     // Databases and references for taxonomic classification
     // =====================================================
@@ -134,12 +142,7 @@ params {
         
         deduplication {
             enabled  = false
-            method   = "none"                       // none, naive, umi-naive, umi-calib, umi-tools, umi-tools-naive
-
-            umi_tools {
-                seed        = 12372395              // random seed for umi-tools
-                reference   = null                  // host reference index with ercc for alignment deduplication with umi-tools
-            }
+            method   = "none"                       // none, naive, umi-naive, umi-calib
         }
 
         reads {
@@ -153,6 +156,11 @@ params {
                 adapter_seq_1           = null
                 adapter_seq_2           = null
                 trim_poly_g             = 10
+            }
+            nanoq {
+                enabled                 = true
+                min_read_length         = 100
+                min_read_quality        = 7
             }
         }
 
@@ -207,7 +215,15 @@ params {
             enabled = true
 
             kraken2 {
-                enabled = true
+                enabled            = true
+                confidence         = 0   // pathogen profiling
+                minimum_hit_groups = 3   // pathogen detection
+            }
+            bracken {
+                enabled            = false
+                read_length        = 100
+                taxonomic_level    = "S"
+                minimum_reads      = 3
             }
         }
         assembly {
@@ -227,7 +243,7 @@ params {
         
         aneuploidy {
             enabled = true
-            deduplicate = true                            // samotools markdup on host alignment bam
+            deduplicate = true                            // samtools markdup on host alignment bam
             markdup_distance = 100                        // http://www.htslib.org/algorithms/duplicate.html
             reference_index = "db/chm13v2_sr.mmi"
             cnvkit {
@@ -239,6 +255,18 @@ params {
             }
         }
     }
+
+    // Metagenomics from culture for profiling and hybrid-assembly for species identification
+
+    culture {
+        enabled = false
+
+        assembly {
+            enabled = true
+        }
+
+    }
+
 }
 
 // ================================
