--- a/templates/stack/traefik/web/static.yml
+++ b/templates/stack/traefik/web/static.yml
@@ -14,16 +14,7 @@ providers:
 api:
   dashboard: true                               # Enable the dashboard
 
-# Certificate Resolvers are responsible for retrieving certificates from an ACME server
-# See https://doc.traefik.io/traefik/https/acme/#certificate-resolvers
-
-certificatesResolvers:
-  letsEncrypt:
-    acme:
-      email: "{{{ traefik.web.email }}}"          # Email address used for registration
-      storage: "/etc/traefik/certs/acme.json"     # File or key used for certificates storage
-      httpchallenge:
-        entryPoint: http                        
+# Entry point HTTP/HTTPS
 
 entryPoints:
   http:
@@ -35,3 +26,15 @@ entryPoints:
           scheme: "https"                       # The redirection target scheme
   https:
     address: ":443"                             # Create the HTTPS entrypoint on port 443
+
+
+# Certificate Resolvers are responsible for retrieving certificates from an ACME server
+# See https://doc.traefik.io/traefik/https/acme/#certificate-resolvers
+
+certificatesResolvers:
+  letsEncrypt:
+    acme:
+      email: "{{{ traefik.web.email }}}"          # Email address used for registration
+      storage: "/etc/traefik/certs/acme.json"     # File or key used for certificates storage
+      httpChallenge:
+        entryPoint: http                        
