chore(nextflow): fix ivar tools

--- a/nextflow.config
+++ b/nextflow.config
@@ -131,7 +131,7 @@ params {
     reads {
         subsample {
             enabled    = false
-            reads      = [15000000, 10000000, 5000000, 1000000]
+            reads      = [7000000, 5000000, 3000000, 1000000, 500000, 100000]
             replicates = 1
         }
     }
