--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,7 +34,7 @@ niffler = "2.3"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 log = "0.4"
-chrono = { version = "0.4", features = ["serde", "rustc-serialize"] }
+chrono = { version = "0.4", features = ["serde"] }
 rand = "0.8.5"
 csv = "1.2"
 colored = "2.0"
