--- a/app/package.json
+++ b/app/package.json
@@ -33,7 +33,7 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-svelte": "^2.30.0",
     "highlight.js": "11.8.0",
-    "postcss": "8.4.28",
+    "postcss": "^8.4.38",
     "prettier": "^2.8.0",
     "prettier-plugin-svelte": "^2.10.1",
     "simple-statistics": "^7.8.3",
