--- a/conda.yml
+++ b/conda.yml
@@ -8,16 +8,21 @@ dependencies:
   - minimap2=2.24
   - samtools
   - kraken2=2.1.2
+  - bracken=2.9.0
   - fastp=0.23.2
   - nextflow=22.10.4
   - ivar=1.3.1
   - spades=3.15.5
-  - strobealign=0.8.0
+  - strobealign=0.13.0
   - blast=2.13.0
   - mash=2.3
   - diamond=2.1.4
-  - umi_tools=1.1.4
   - calib=0.3.4
   - rasusa=0.7.1
   - cnvkit=0.9.10
   - nanoq=0.10.0
+  # scrubby
+  # vircov
+  # cipher
+  # netview
+
