--- a/cerebro/stack/report/Cargo.toml
+++ b/cerebro/stack/report/Cargo.toml
@@ -20,21 +20,45 @@ include = [
 
 [[bin]]
 name = "cerebro-report"
-path = "src/interface.rs"
+path = "src/cli.rs"
 
 [lib]
 name = "cerebro_report"
+
 # crate-type = ["cdylib"]
 
 [dependencies]
+
+# Workflow library dependency to access module structs and definitions
+# to use in endpoints e.g. to generate quality control summary tables  
+# for the user from models in the database
+cerebro-workflow = { path = "../workflow" }
+
+# Model library dependency to access shared module structs and definitions
+# to use in endpoints and client responses
+cerebro-model = { path = "../../lib/model" }
+
+anyhow = "1.0"
+thiserror = "1.0"
+serde_json = "1.0"
+itertools = "0.10.3"
+env_logger = "0.9.0"
+log = "0.4"
+csv = "1.2"
+chrono = "0.4.37"
+clap = { version = "4.3.23", features = ["derive", "env", "unstable-styles", "wrap_help"] }
+niffler = "2.5.0"
+anstyle = "1.0.6"
+uuid = { version = "1.2.1", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
+handlebars = "4.3.7"
+toml = "0.7.6"
+
 typst = "0.11"
 typst-render = "0.11"
 typst-svg = "0.11"
 typst-pdf = "0.11.0"
 typst-assets = { version = "0.11", features = ["fonts"] }
 comemo = "0.4"
-
-
 wasm-bindgen = "^0.2"
 js-sys = "^0.3"
 wasm-bindgen-futures = "^0.4"
@@ -51,7 +75,6 @@ console_error_panic_hook = "0.1.7"
 
 fast_image_resize = "2.7.3"
 ariadne = "0.4.0"
-chrono = "0.4.30"
 zune-inflate = { version = "0.2", default_features = false, features = ["gzip", "std"] }
 tar = "0.4"
 ureq = "2.9"
