--- a/cerebro/stack/watcher/Cargo.toml
+++ b/cerebro/stack/watcher/Cargo.toml
@@ -25,6 +25,17 @@ path = "src/cli.rs"
 name = "cerebro_watcher"
 
 [dependencies]
+
+# Model library dependency to access shared module structs and definitions
+# to use in endpoints and client responses
+cerebro-model = { path = "../../lib/model" }
+
+# Model library dependency to access shared module structs and definitions
+# to use in endpoints and client responses
+cerebro-fs = { path = "../fs" }
+cerebro-client = { path = "../client" }
+
+
 anyhow = "1.0"
 thiserror = "1.0"
 serde_json = "1.0"
@@ -33,6 +44,7 @@ env_logger = "0.9.0"
 log = "0.4"
 csv = "1.2"
 colored = "2.0"
+wax = "0.5.0"
 needletail = "0.5.1"
 globwalk = "0.9.1"
 ansi_term = "0.12.1"
