chore(dev): watcher ui draft

--- a/templates/report/test.toml
+++ b/templates/report/test.toml
@@ -110,7 +110,7 @@ negative                   = false
 [sample.laboratory]
 toml                        = ""                # optional path to config file, path string interpreted same as [template.path]
 description                 = """
-CSF was extracted using the QIAGEN EZ1 platform and EZ1 kits. Total nucleic acid was split, with half treated with DNase for RNA library preparation. 
+Sample was extracted using the QIAGEN EZ1 platform and EZ1 kits. Total nucleic acid was split, with half treated with DNase for RNA library preparation. 
 A positive and negative template control were run alongside clinical samples. DNA and RNA libraries were prepared using the NEB NEBNext Ultra II FS DNA and
 NEBNext Ultra II RNA library preparation kit, with the use of NEBNext Dual Index Barcodes. EDCC and ERCC internal controls were spiked into DNA and RNA libraries 
 respectively. Libraries were size selected and quantified using the Agilent TapeStation and the Invitrogen Qubit 4 Fluorometer. 
