chore(dev): watcher ui draft

--- a/nextflow.config
+++ b/nextflow.config
@@ -172,7 +172,7 @@ params {
                 fasta = null
                 identifiers {
                     dna_extraction = "T4-Monash"
-                    rna_extraction = null
+                    rna_extraction = "M2-Monash"
                     sequencing     = "PhiX"
                 }
             }
@@ -359,9 +359,13 @@ profiles {
 
     databases {
         params.qc.controls.ercc.fasta                 = "db/ERCC92.fasta"
-        params.qc.controls.phage.fasta                = "db/T4.fasta"
+        params.qc.controls.phage.fasta                = "db/phage.fasta"
         params.qc.host.depletion.references           = "db/chm13v2_sr.mmi"
         params.qc.host.depletion.databases            = "db/langmead_pluspf_64GB"
+
+        params.qc.controls.phage.identifiers.dna_extraction = "T4-Monash"      
+        params.qc.controls.phage.identifiers.rna_extraction = "M2-Monash"    
+        params.qc.controls.phage.identifiers.sequencing     = "PhiX"
 
         params.virus_background_references = "db/SILVA_LSURef_NR99.fasta,db/SILVA_SSURef_NR99.fasta"
         params.virus_background_dbs = "db/langmead_pluspf_64GB,db/rrna"
