--- a/nextflow.config
+++ b/nextflow.config
@@ -229,6 +229,34 @@ params {
 
             meta {
                 enabled = true
+                spades {
+                    k = "21,29,39,59,79,99"
+                }
+                blastn {
+                    enabled = true
+                    min_evalue = 0.000001
+                    min_identity  = 80
+                    max_target_seqs = 100
+                }
+                diamond {
+                    enabled = true
+                    args = "--mid-sensitive"
+                    min_evalue = 0.000001
+                    min_identity  = 60
+                    max_target_seqs = 50
+                    // Block size in billions of sequence letters to be processed at a time. 
+                    // This is the main parameter for controlling the program’s memory and disk space usage. 
+                    // Bigger numbers will increase the use of memory and temporary disk space, but also improve performance. 
+                    // The program can be expected to use roughly six times this number of memory (in GB). The default value 
+                    // is 2.0. The parameter can be decreased for reducing memory use, as well as increased for better  
+                    // performance (values of > 20 are not recommended).
+                    block_size = 12
+                    // The number of chunks for processing the seed index. 
+                    // This option can be additionally used to tune the performance. 
+                    // The default value is 4, while setting this parameter to 1 instead
+                    // will improve the performance at the cost of increased memory use.
+                    index_chunks = 1
+                }
             }
             viruses {
                 enabled = false
@@ -236,6 +264,7 @@ params {
         }
     }
     
+
     host {
         enabled = false
         
