chore(dev): test fix for line breaks in nxf shell blocks

--- a/nextflow.config
+++ b/nextflow.config
@@ -266,6 +266,13 @@ params {
             }
             viruses {
                 enabled = false
+
+                ivar {
+                    mpileup_args = "-d 50000"
+                    min_qual     = 20
+                    min_depth    = 20
+                    min_freq     = 0.75
+                }
             }
         }
     }
