chore(dev): fix params

--- a/nextflow.config
+++ b/nextflow.config
@@ -264,7 +264,7 @@ params {
                     index_chunks = 1
                 }
             }
-            viruses {
+            consensus {
                 enabled = false
 
                 ivar {
